--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,7 +1,6 @@
 title: Installing Raspbian with NOOBS
 hero_image: images/banner.png
-description: A guide on how to install Raspbian on an SD card using NOOBS, from any
-  platform
+description: A guide on how to install Raspbian on an SD card using NOOBS, from any platform
 original_url: https://raspberrypi.org/learning/noobs-install
 theme: red
 duration: 2
